--- a/starter-code/src/App.css
+++ b/starter-code/src/App.css
@@ -1,28 +1,19 @@
 .App {
-  text-align: center;
+  text-align: center
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.App img {
+  height: 100px
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.App button {
+  background-color: white;
+  margin: 10px; 
+  width: 200px;
+  font-size: 18px;
 }
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.Table {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
